--- a/package.json
+++ b/package.json
@@ -9,11 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "formik": "^2.4.5",
     "gsap": "^3.12.2",
     "next": "14.0.3",
     "react": "^18",
     "react-dom": "^18",
-    "react-icons": "^4.12.0"
+    "react-fast-marquee": "^1.6.2",
+    "react-icons": "^4.12.0",
+    "react-star-ratings": "^2.3.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
